Re-implement JavaPlugin.getPlugin and add testable constructor
Log a warning when the getPlugin method is used